# Eu4SaveAnalyzer

./: .gitignore  CMakeLists.txt  LICENSE  README.md
test/: CMakeLists.txt  main.cpp  parser.cpp  parser.hpp
